[package]
name = "stack-map"
version = "1.0.4"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "constant-size associative container for building higher-level data structures out of"
license = "MIT OR Apache-2.0"
repository = "https://github.com/komora-io/stack-map"
documentation = "https://docs.rs/stack-map/"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.160", optional = true }
